--- a/src/sass/icon.scss
+++ b/src/sass/icon.scss
@@ -1,6 +1,6 @@
-﻿@import "icon/*.png";
-@include all-icon-sprites;
+﻿@import "iconSprite";
 
-body,html{
-	margin:0;
+.icon-clock{
+    @include iconSprite(clock);
 }
+ 
