--- a/src/sass/intro_v5.scss
+++ b/src/sass/intro_v5.scss
@@ -1,35 +1,128 @@
 @import "icon";
 
-.class-header{
-	padding: 20px;
+$gray: #898989;
+$blueHover: #5fb740;
+$blue: #74cd55;
+
+// common
+.clearfix:before,.clearfix:after {content:"";display:table;}
+.clearfix:after {clear:both;overflow:hidden;}
+.clearfix {zoom:1;} /* IE < 8 */
+a:link, a:visited, a:active {color:#494949; text-decoration:none; }
+a:hover{color: #f60; }
+.gray {color: $gray; }
+.blue{color: $blue;}
+a.btnGreen{
+    display: block;
+    padding:2px 10px;
+    color: #fff;
+    background: $blue;
+    line-height: 18px;
+    border-radius: 2px;
+    font-family: 'microsoft yahei';
+}
+.btnGreen:hover{
+   background: $blueHover;
+}
+
+body{
+    color: #494949;
+}
+.wrapper{
+	background: #fff;
+	overflow: hidden;
 	position: relative;
-	.class-info{
-		width:1200px;
+}
+.main{
+    width: 1000px;
+    margin: 0 auto; 
+    padding-right: 200px;  
+}
+.intro-header{
+	padding: 20px 0;
+	position: relative;
+	.intro-info{
+		width:1160px;
 		margin: 0 auto;
 		padding: 15px 20px;	
 		background: #fff;
+		position:relative;
 	}
 	.header-bg{
-		background: url(http://i3.c.hjfile.cn/lesson/intro/201501/284bf67a-7369-4736-8c47-9931d0eddb3d.png) no-repeat center;
-		-webkit-filter: blur(5px);
+		-webkit-filter: blur(60px);
 		position: absolute;
 		width: 100%;
+		background-size: cover;
 		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: 0;
+		overflow:hidden;
 	}
-	.class-title{
+	.intro-title{
 		font-family:'microsoft yahei';
 		font-size: 24px;
 	}
-	.class-desc{
+	.intro-desc{
 		color: #999;
 	}
-	.class-info-l{
+	.intro-info-l{
 		width:50%;
+		float:left;
+		.support-device{
+		    color: $gray;
+		    margin: 10px 0 0 0;
+		    font-family: 'microsoft yahei';
+		    font-size: 14px;
+		}
 	}
-	.class-info-r{
+	.intro-info-r{
 		width: 50%;
-		.class-price{
+		float:left;
+		.intro-price{
 			border-bottom:1px solid #fafafa;
 		}
 	}
 }
+.intro-nav{
+	height: 52px;
+	position: relative;
+	border-bottom: 1px solid #e8e8e8;
+	background: #fff;
+	.intro-nav-con{
+		width: 1200px;
+		margin: 0 auto;
+	}
+	.nav-list a{
+		display: block;
+		height: 52px;
+		padding: 0 50px;
+		line-height: 52px;
+		font-family:'microsoft yahei';
+		font-size: 18px;
+		text-align: center;
+		float: left;
+		&.cur{
+			background: #74cd55;
+			color: #fff;
+		}
+	}
+}
+.intro-panel{
+    padding-top: 30px;
+    .panel-title{
+        border-left: 8px solid #74CD55;
+        font-size: 20px;
+        font-family: 'microsoft yahei';
+        color: $blue;
+        padding-left: 10px;
+        line-height: 24px;
+        margin-bottom: 30px;
+    }
+    .panel-con{
+        font-size: 14px;
+        font-family: 'microsoft yahei';
+        line-height:26px;
+    }
+}
+
