intro页 课程大纲 课程咨询页 响应式开发 完成版

--- a/src/sass/outline-icon.scss
+++ b/src/sass/outline-icon.scss
@@ -9,3 +9,8 @@
     margin-right: 10px;
     margin-top: 19px;
 }
+.icon-try {
+    @include iconSprite(try);
+display: inline-block;
+margin-top: 7px;
+}
