--- a/src/sass/outline.scss
+++ b/src/sass/outline.scss
@@ -32,14 +32,10 @@ html {
     width: 90%;
 }
 .outline-title {
-    height: 40px;
     margin: 10px 0;
     color: #5fb740;
-    line-height: 40px;
 }
 .outline-title .title-header {
-    height: 40px;
-    line-height: 40px;
     border-left: 10px solid #74cd55;
     padding-left: 10px;
 }
@@ -54,8 +50,7 @@ html {
     padding: 5px;
     border-top: 1px solid #f1f1f1;
     border-bottom: 1px solid #f1f1f1;
-    a {
-        text-decoration: none;
+    span {
         color: #666;
         margin-left: 15px;
     }
@@ -97,7 +92,7 @@ html {
         .circle-num {
             width: 30px;
             height: 30px;
-            background: #fff;
+            background-color: #fff;
             border-radius: 50%;
             border: 5px solid #8CD373;
             float: left;
@@ -158,7 +153,7 @@ html {
                 li:last-of-type {
                     border-bottom: none;
                 }
-                a {
+                span {
                     margin-left: 0;
                 }
             }
