--- a/src/sass/intro_v5.scss
+++ b/src/sass/intro_v5.scss
@@ -13,7 +13,7 @@ a:hover{color: #f60; }
 .gray {color: $gray; }
 .blue{color: $blue;}
 a.btnGreen{
-    display: block;
+    display: inline-block;
     padding:2px 10px;
     color: #fff;
     background: $blue;
@@ -110,6 +110,7 @@ body{
 }
 .intro-panel{
     padding-top: 30px;
+    float: left;
     .panel-title{
         border-left: 8px solid #74CD55;
         font-size: 20px;
@@ -126,3 +127,61 @@ body{
     }
 }
 
+.intro-role-panel{
+    .roles-img{
+        float: left;
+    }
+    .roles-detail{
+        padding-left: 100px;
+    }
+    .icon-class-roles{
+        display: block;
+        width: 82px;
+        height: 82px;
+        background: url(/src/images/icon-role.png) no-repeat;
+    }
+    .icon-class-goals{
+        display: block;
+        width: 82px;
+        height: 82px;
+        background: url(/src/images/icon-goal.png) no-repeat;
+    }
+}
+.recommond-panel{
+    .recommond-title{
+        text-align: center;
+        border-top: 1px solid #e0e0e0;
+        height:0;
+        line-height:0;
+        margin: 25px 0;
+        position: relative;
+    }
+    .recommond-txt{
+        background: #FFF;
+        padding: 0 20px;
+        display: inline-block;
+        position: absolute;
+        height: 22px;
+        line-height: 20px;
+        top: -10px;
+        margin-left: -153px;
+    }
+    .recommond-tbl{
+        width:100%; 
+        border: 1px solid #f5f5f5;
+        td{
+            height:  35px;
+        }
+        thead td{
+            background: #f8f8f8;
+            text-align: center;
+        }
+    }
+}
+.class-time-panel{
+    .timeline-box{
+        background: url(/src/images/timeLine.png) no-repeat center;
+        width: 509px;
+        position: relative;
+    }
+}
