--- a/src/sass/consult-icon.scss
+++ b/src/sass/consult-icon.scss
@@ -20,8 +20,6 @@
 }
 .icon-pull{
     @include iconSprite(pull);
-    display: block;
-    float: left;
-    margin-top: 16.5px;
-    margin-right: 5px;
+    display: inline-block;
+    vertical-align: middle;
 }
