--- a/src/sass/schedule.scss
+++ b/src/sass/schedule.scss
@@ -28,60 +28,56 @@ html {
     height: 200px;
     background: green;
 }
-.outline-content {
+.schedule-content {
     width: 90%;
 }
-.outline-title {
+.schedule-title {
     margin: 10px 0;
     color: #5fb740;
 }
-.outline-title .title-header {
-    border-left: 10px solid #74cd55;
+.schedule-title .title-header {
+    border-left: 4px solid #74cd55;
     padding-left: 10px;
 }
-.outline-content .outline-list .item {
+.schedule-content .schedule-list .item {
     height: 50px;
     margin: 5px 0;
     line-height: 50px;
     cursor: pointer;
 }
-.outline-content .outline-list .item-content {
+.schedule-content .schedule-list .item-content {
     background: #f9f9f9;
     padding: 5px;
     border-top: 1px solid #f1f1f1;
     border-bottom: 1px solid #f1f1f1;
-    span {
-        color: #666;
-        margin-left: 15px;
-    }
+    color: #666;
     .class-icon {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         border-radius: 50%;
-        float: left;
-        margin-top: 0.5px;
+        display: inline-block;
+         _zoom:1;_display:inline;
         border: 2px solid #ccc;
         margin-left: 70px;
+        margin-right: 9px;
         background: #fff;
+        vertical-align: -8px;
     }
 }
-.outline-content .outline-list .item-content li {
-    margin-top: 5px;
+.schedule-content .schedule-list .item-content li {
     padding: 5px;
     height: 35px;
     line-height: 35px;
 }
-.outline-list {
+.schedule-list {
     .item {
-        position: relative;
         .unit {
             width: 100px;
             height: 32px;
-            float: left;
+            display: inline-block;
+             _zoom:1;_display:inline;
             background: #c0c0c0;
-            position: absolute;
-            top: 50%;
-            margin-top: -16px;
+            vertical-align: 0;
             line-height: 32px;
             border-radius: 18px;
             color: #fff;
@@ -95,42 +91,40 @@ html {
             background-color: #fff;
             border-radius: 50%;
             border: 5px solid #8CD373;
-            float: left;
             line-height: 30px;
             color: #8CD373;
             text-align: center;
             box-shadow: 0 0 0 2px #fff;
-            position: absolute;
+            margin-left: -30px;
             z-index: 33;
-            margin-left: 78px;
-            top: 50%;
-            margin-top: -20px;
+            display: inline-block;
+             _zoom:1;_display:inline;
             font-weight: normal;
+            vertical-align: 0;
+        }
+        .circle0 {
+            vertical-align: -2px;
         }
         .title {
-            padding-left: 133px;
+            padding-left: 4px;
             color: #606060;
-            font-weight: normal;
         }
     }
 }
-@media screen and  (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .online, .onlyPC {
         display: none;
     }
-    .outline-content {
+    .schedule-content {
         width: 100%;
-        .outline-title {
+        .schedule-title {
             width: 95%;
             margin: 0 auto;
         }
-        .unit {
-            display: none;
+        .unit, .class-icon {
+            display: none !important;
         }
-        .class-icon {
-            display: none;
-        }
-        .outline-list {
+        .schedule-list {
             .item {
                 width: 95%;
                 margin: 0 auto;
@@ -139,13 +133,10 @@ html {
                     border: 1px solid #8CD373;
                     margin-top: -16px;
                 }
-                .title {
-                    padding-left: 44px;
-                }
             }
             .item-content {
                 border: none;
-                padding:0;
+                padding: 0;
                 li {
                     border-bottom: 1px solid #e7e7e7;
                     margin-left: 15px;
@@ -161,5 +152,8 @@ html {
     }
     .wrapper {
         width: 100%;
+    }
+    .icon-arrowup,.icon-arrowdown {
+        margin-right: 3px !important;
     }
 }
