--- a/src/sass/schedule-icon.scss
+++ b/src/sass/schedule-icon.scss
@@ -11,6 +11,8 @@
 }
 .icon-try {
     @include iconSprite(try);
-display: inline-block;
-margin-top: 7px;
+    display: inline-block;
+    *display: inline;zoom: 1;
+    vertical-align: -2px;
+    *vertical-align: -7px;
 }
