--- a/src/sass/schedule.scss
+++ b/src/sass/schedule.scss
@@ -56,7 +56,7 @@ html {
         height: 25px;
         border-radius: 50%;
         display: inline-block;
-         _zoom:1;_display:inline;
+        zoom:1;*display:inline;
         border: 2px solid #ccc;
         margin-left: 70px;
         margin-right: 9px;
@@ -75,7 +75,7 @@ html {
             width: 100px;
             height: 32px;
             display: inline-block;
-             _zoom:1;_display:inline;
+            zoom:1;*display:inline;
             background: #c0c0c0;
             vertical-align: 0;
             line-height: 32px;
@@ -98,12 +98,10 @@ html {
             margin-left: -30px;
             z-index: 33;
             display: inline-block;
-             _zoom:1;_display:inline;
+            zoom:1;*display:inline;
             font-weight: normal;
             vertical-align: 0;
-        }
-        .circle0 {
-            vertical-align: -2px;
+            *vertical-align: -5px; 
         }
         .title {
             padding-left: 4px;
