--- a/src/sass/consult-icon.scss
+++ b/src/sass/consult-icon.scss
@@ -21,5 +21,6 @@
 .icon-pull{
     @include iconSprite(pull);
     display: inline-block;
+    *display: inline;zoom: 1;
     vertical-align: middle;
 }
