--- a/src/sass/consult.scss
+++ b/src/sass/consult.scss
@@ -24,7 +24,7 @@ i {
     width: 90%;
     margin: 0 auto;
     font-family: "Microsoft Yahei";
-    font-size: 0.8rem;
+    font-size: 16px;
     .online {
         width: 8%;
         height: 200px;
@@ -49,8 +49,9 @@ i {
                 .icon {
                     height: 39px;
                     display: inline-block;
-                     _zoom:1;_display:inline;
+                    zoom:1;*display:inline;
                     vertical-align: middle;
+                    margin-right:3px;
                 }
                 .pcPic {
                     width: 100%;
@@ -81,11 +82,13 @@ i {
                 .title-link a {
                     border: 1px solid #5fb740;
                     border-radius: 3px;
+                    behavior: url(/src/pie/PIE.htc);
                     padding: 3px 9px;
                     color: #5fb740;
                     text-decoration: none;
-                    margin: 0 0.25rem;
-                    font-size: 0.7rem;
+                    margin: 0 5px;
+                    font-size: 14px;
+
                 }
             }
         }
@@ -96,34 +99,35 @@ i {
 }
 .user-qa {
     margin-bottom: 42px;
-    font-size: 0.7rem;
+    font-size: 14px;
     .user-q {
         .username {
             width: 104px;
             color: #999;
-            height: 1.8rem;
+            height: 36px;
             position: relative;
             .username-word {
                 display: inline-block;
-                 _zoom:1;_display:inline;
+                 zoom:1;*display:inline;
                 position: absolute;
-                height: 0.8rem;
+                height: 16px;
                 top: 50%;
-                margin-top: -0.4rem;
-                margin-left: 0.5rem;
+                margin-top: -8px;
+                margin-left: 10px;
             }
             .user-icon {
-                width: 1.8rem;
-                height: 1.8rem;
+                width: 36px;
+                height: 36px;
                 border-radius: 50%;
+                behavior: url(/src/pie/PIE.htc);
             }
         }
         .user-question {
             color: #494949;
             padding-left: 104px;
-            padding-top: 0.5rem;
+            padding-top: 10px;
             .often {
-                font-size: 0.6rem;
+                font-size: 12px;
                 background: #ff992b;
                 color: #fff;
                 margin-left: 5px;
@@ -170,15 +174,16 @@ i {
 .page-link a {
     text-decoration: none;
     display: inline-block;
-     _zoom:1;_display:inline;
-    width: 2rem;
-    height: 2rem;
+    zoom:1;*display:inline;
+    width: 40px;
+    height: 40px;
     border: 1px solid #efefef;
     color: #494949;
     border-radius: 50%;
-    line-height: 2rem;
+    behavior: url(/src/pie/PIE.htc);
+    line-height: 40px;
     background: #efefef;
-    margin: 0 0.25rem;
+    margin: 0 5px;
 }
 .page-link a.active {
     border: 1px solid #74cd55;
@@ -204,12 +209,13 @@ i {
 }
 .consult-content .msg .submit {
     text-decoration: none;
-    width: 8rem;
-    height: 2rem;
+    width: 160px;
+    height: 40px;
     background: #74cd55;
     display: block;
     border-radius: 1px;
-    line-height: 2rem;
+    behavior: url(/src/pie/PIE.htc);
+    line-height: 40px;
     text-align: center;
     color: #fff;
     margin: 20px auto;
@@ -244,7 +250,7 @@ i {
     }
     .consult-pic .pic-wrapper .iconm {
         display: inline-block;
-         _zoom:1;_display:inline;
+        zoom:1;*display:inline;
     }
     .consult-wrapper {
         width: 95%;
@@ -297,7 +303,7 @@ i {
         display: block;
         background: #f0eff4;
         text-align: center;
-        font-size: 0.6rem;
+        font-size: 12px;
         color: #999;
         height: 50px;
         line-height: 50px;
