--- a/src/sass/iconSprite.scss
+++ b/src/sass/iconSprite.scss
@@ -2,6 +2,8 @@
 
 
 @mixin iconSprite($name){
+    display: inline-block;
+    vertical-align: middle;
     width: icon-sprite-width($name);
     height: icon-sprite-height($name);
     @include icon-sprite($name);
