--- a/src/sass/jquery.bxslider.scss
+++ b/src/sass/jquery.bxslider.scss
@@ -19,7 +19,7 @@
 	position: relative;
 	margin: 0 auto 60px; 
 	*zoom: 1;
-	padding: 0 100px;
+	padding: 0 85px;
 }
 
 .bx-wrapper img {
@@ -107,12 +107,8 @@
 	@include iconSprite(arrow-r);
 }
 
-.bx-wrapper .bx-prev:hover {
-	background-position: 0 0;
-}
-
-.bx-wrapper .bx-next:hover {
-	background-position: -43px 0;
+.bx-wrapper .bx-prev:hover,.bx-wrapper .bx-next:hover {
+	background-color: #f7f6f6;
 }
 
 .bx-wrapper .bx-controls-direction a {
@@ -120,8 +116,8 @@
 	top: 50%;
 	margin-top: -16px;
 	outline: 0;
-	width: 32px;
-	height: 32px;
+	width: 42px;
+	height: 51px;
 	text-indent: -9999px;
 	z-index: 9999;
 }
